@@ -8,6 +8,8 @@ IN PROGRESS...
 * Some crashes fixed
 + Dialog listeners
 + New random encounters
++ Encounter with Obliterator ship
+* Gamover after player 3 times returns with not enough data (was 1 time before)
 
 =====================================================
 VERSION 0.0.4
